--- a/styles.css
+++ b/styles.css
@@ -345,3 +345,11 @@ div.footer h6 {
     font-size: 1rem;
     padding-top: 6rem;
 }
+
+@media (max-width: 767px) {
+    div.footer-input {
+        flex-direction: column;
+    }
+
+    
+}
