--- a/styles.css
+++ b/styles.css
@@ -351,6 +351,91 @@ div.footer h6 {
         overflow-x: hidden!important;
     }
 
+    .nav-bar {
+        padding: 0.7rem 2rem!important;
+    }
+
+
+
+    ul.nav-links {
+        position: fixed;
+        flex-direction: column;
+        height: 40vh;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        transform: translateX(100%);
+        transition: all 500ms cubic-bezier(0, 1.88, 1, 1.22);
+        align-content: center;
+        justify-content: space-between;
+    }
+
+    .nav-toggle {
+        position: absolute;
+        z-index: 1000;
+        background: transparent;
+        right: 2.5rem;
+        cursor: pointer;
+        outline: none;
+        border: none;
+        padding: 1em;
+    }
+
+    .active .nav-toggle {
+        position: fixed;
+    }
+
+    .active .nav-links {
+        transform: translateX(0);
+    }
+
+    /* the hamburger */
+
+    .ham--icon{
+        display: block;
+        position: relative;
+    }
+
+    .ham--icon,
+    .ham--icon::before,
+    .ham--icon::after {
+        width: 1.3em;
+        border-radius: 2px;
+        height: 2px;
+        background: #fff;
+    }
+
+    .ham--icon::before,
+    .ham--icon::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
+    .ham--icon::before {
+        transform: translateY(-5px);
+    }
+
+    .ham--icon::after {
+        transform: translateY(5px);
+    }
+
+    .active .ham--icon {
+        background: transparent;
+        box-shadow: none;
+        transform: translateX(-6px);
+    }
+
+    .active .ham--icon::before {
+        transform: rotate(45deg) translate(10px, -10px);
+    }
+
+    .active .ham--icon::after {
+        transform: rotate(-45deg) translate(10px, 10px)
+    }
+
     .hero-section {
         padding: 10rem 4rem!important;
         min-width: 212px!important;
