--- a/styles.css
+++ b/styles.css
@@ -375,11 +375,15 @@ div.footer h6 {
         position: absolute;
         z-index: 1000;
         background: transparent;
-        right: 2.5rem;
+        right:2.5rem;
         cursor: pointer;
         outline: none;
         border: none;
         padding: 1em;
+    }
+
+    .nav-toggle:focus {
+        display: none;
     }
 
     .active .nav-toggle {
