--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ div.nav-bar {
     padding: 1rem 6rem;
     width: 100vw;
     background: #304353;
+    position: relative;
 }
 
 button.nav-toggle {
@@ -355,106 +356,70 @@ div.footer h6 {
         overflow-x: hidden!important;
     }
 
-    .nav-bar {
-        padding: 1em!important;
-    }
-
-    
-    ul.nav-links {
-        position: fixed;
-        flex-direction: column;
+    .header__nav {
+        width: 200px;
         height: 100vh;
+        background-color: #000;
+        position: fixed;
         top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        margin: 0 auto;
-        transform: translateX(100%);
-        transition: all 500ms cubic-bezier(0, 1.88, 1, 1.22);
-        align-content: center;
-        justify-content: space-evenly;
-        background: black!important;
-        opacity: 0.9;
-        z-index: 100;
-    }
-
-    .nav-links li {
-        margin: 0 auto;
-    }
-
-    button.nav-toggle {
-        display: block;
-    }
-
-    .nav-toggle {
-        position: absolute;
+        right: -200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 20px 0 0 20px;
         z-index: 1000;
+    }
+
+    .active {
+        right: 0;
+    }
+
+    ul.nav-links {
+        flex-direction: column;
+    }
+
+    .nav-item {
+        margin: 35px;
+    }
+
+    .hamburger-icon {
+        width: 20px;
+        height: 20px;
+        position: fixed;
         background: transparent;
         right: 1em;
         top: 1em;
         cursor: pointer;
-        outline: none;
-        border: none;
-        padding: 1em;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: column;
+        transition: right 0.8s cubic-bezier(0.6, 0, 0, 1);
     }
 
-    .nav-toggle:focus {
+    .line{
+        width: 100%;
+        height: 3px;
+        background: white;
+        border-radius: 3px;
+        transition: all 0.5s;
+    }
+
+    .active .one {
+        transform: rotateZ(-45deg) translate(-8px, 6px);
+        background-color: tomato;
+        z-index: 100;
+    }
+
+    .active .two {
         display: none;
     }
 
-    .active .nav-toggle {
-        position: fixed;
+    .active .three {
+        transform: rotateZ(45deg) translate(-6px, -4px);
     }
 
-    .active .nav-links {
-        transform: translateX(0);
-    }
 
-    /* the hamburger */
-
-    .ham--icon{
-        display: block;
-        position: relative;
-    }
-
-    .ham--icon,
-    .ham--icon::before,
-    .ham--icon::after {
-        width: 1.3em;
-        border-radius: 2px;
-        height: 2px;
-        background: #fff;
-    }
-
-    .ham--icon::before,
-    .ham--icon::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-    }
-
-    .ham--icon::before {
-        transform: translateY(-5px);
-    }
-
-    .ham--icon::after {
-        transform: translateY(5px);
-    }
-
-    .active .ham--icon {
-        background: transparent;
-        box-shadow: none;
-        transform: translateX(-6px);
-    }
-
-    .active .ham--icon::before {
-        transform: rotate(45deg) translate(10px, -10px);
-    }
-
-    .active .ham--icon::after {
-        transform: rotate(-45deg) translate(10px, 10px)
-    }
 
     .hero-section {
         padding: 10rem 4rem!important;
